errorPlot_fields function: updated output when specify = NA to not include youth hunters in the bar; they are added as a different color when specify parameter is used. this was done to exclude youth hunters from the vignette figures

--- a/inst/templates/dl_report.Rmd
+++ b/inst/templates/dl_report.Rmd
@@ -105,13 +105,13 @@ rm(fxd)
 ### Before correction
 
 ```{r erpf, echo = FALSE}
-errorPlot_fields(proofed_data, specify = params$year)
+errorPlot_fields(proofed_data)
 ```
 
 ### After correction
 
 ```{r erpf_c, echo = FALSE}
-errorPlot_fields(corrected_data, specify = params$year)
+errorPlot_fields(corrected_data)
 ```
 
 ## By state
