--- a/vignettes/migbirdHarvestData_workflow.Rmd
+++ b/vignettes/migbirdHarvestData_workflow.Rmd
@@ -441,7 +441,7 @@ The `errorPlot_fields` function can be run on all states...
 
 
 ```r
-errorPlot_fields(DL1202_proofed, loc = "all")
+errorPlot_fields(DL1202_proofed, loc = "all", year = 2020)
 ```
 
 <img src="figure/errorfieldsplotall-1.png" title="Figure 2. Plot of all location's errors by field name." alt="Figure 2. Plot of all location's errors by field name." width="500" style="display: block; margin: auto;" />
@@ -450,16 +450,16 @@ errorPlot_fields(DL1202_proofed, loc = "all")
 
 
 ```r
-errorPlot_fields(DL1202_proofed, loc = "LA")
+errorPlot_fields(DL1202_proofed, loc = "LA", year = 2020)
 ```
 
 <img src="figure/errorfieldsplotsc-1.png" title="Figure 3. Plot of all North Carolina's errors by field name." alt="Figure 3. Plot of all North Carolina's errors by field name." width="500" style="display: block; margin: auto;" />
 
-The year in which the HIP data were collected can be specified in `errorPlot_fields` to view the proportion of "errors" created by youth hunters. Youth hunters are not included in the error plot if `specify` is not defined.
+The `youth` parameter can be set to TRUE for `errorPlot_fields` to view the proportion of "errors" created by youth hunters. Youth hunters are not included in the error plot if `youth = FALSE` (set as default).
 
 
 ```r
-errorPlot_fields(DL1202_proofed, specify = 2020)
+errorPlot_fields(DL1202_proofed, year = 2020, youth = TRUE)
 ```
 
 <img src="figure/errorfieldsplotyouth-1.png" title="Figure 4. Plot of all location's errors by field name, with stacked colors to indicate if there are youth hunters or Canadian zip codes in the data, two common causes of error." alt="Figure 4. Plot of all location's errors by field name, with stacked colors to indicate if there are youth hunters or Canadian zip codes in the data, two common causes of error." width="500" style="display: block; margin: auto;" />
@@ -470,7 +470,8 @@ It is possible to add any `ggplot2` components to these plots. For season total 
 ```r
 errorPlot_fields(
   hipdata2020 %>%
-    filter(str_detect(dl_cycle, "0800|0901|0902|1001"))) +
+    filter(str_detect(dl_cycle, "0800|0901|0902|1001")),
+    year = 2020) +
   theme(
     axis.text.x = element_text(angle = 90, vjust = 0, hjust = 1),
     legend.position = "bottom") +
