report templates: made strataCheck output table scrollable

--- a/inst/templates/season_report.Rmd
+++ b/inst/templates/season_report.Rmd
@@ -42,7 +42,7 @@ corrected_data <- correct(proofed_data, year = params$year)
 
 This is a summary report of the `r params$year` Season of Harvest Information Program (HIP) data. This year, `r nrow(proofed_data)` records were submitted from `r proofed_data %>% select(dl_state) %>% distinct %>% nrow()` states.
 
-Below is a summary table with the total of number of records per download state.
+Below is a table summarizing the total of number of records per download state.
 
 ```{r sum_per_state, echo = FALSE, message = FALSE}
 
@@ -81,7 +81,7 @@ findDuplicates(fxd)
 ## Strata
 
 ```{r stratacheck, echo = FALSE}
-strataCheck(fxd)
+DT::datatable(strataCheck(fxd))
 ```
 
 ## Repeated values
