--- a/inst/templates/dl_report.Rmd
+++ b/inst/templates/dl_report.Rmd
@@ -134,9 +134,9 @@ Let's take a closer look at common errors and issues within this download's HIP 
 
 ## High error counts
 
-Q: What were the most common errors, and what values caused them?
+Q: What were the most common fields with errors, and what values caused them?
 
-Table of most common errors...
+Most common error fields...
 
 ```{r et, echo = FALSE}
 et <- errorTable(proofed_data, loc = "none") %>% arrange(desc(error_count))
@@ -147,37 +147,43 @@ DT::datatable(et)
 Values associated with error in `r et$error[1]`
 
 ```{r pe_1, echo = FALSE}
-err1 <- pullErrors(proofed_data, error = et$error[1])
+err1 <- 
+  pullErrors(proofed_data, error = et$error[1]) %>% 
+  as_tibble() %>% 
+  group_by(value) %>% 
+  summarize(count = n()) %>% 
+  ungroup() %>% 
+  arrange(desc(count))
 
-if(length(err1) > 20){
-  err1[1:20]
-  } else {
-  err1
-    }
+DT::datatable(err1)
 ```
 
 Values associated with error in `r et$error[2]`
 
 ```{r pe_2, echo = FALSE}
-err2 <- pullErrors(proofed_data, error = et$error[2])
+err2 <- 
+  pullErrors(proofed_data, error = et$error[2]) %>% 
+  as_tibble() %>% 
+  group_by(value) %>% 
+  summarize(count = n()) %>% 
+  ungroup() %>% 
+  arrange(desc(count))
 
-if(length(err2) > 20){
-  err2[1:20]
-  } else {
-  err2
-    }
+DT::datatable(err2)
 ```
 
 Values associated with error in `r et$error[3]`
 
 ```{r pe_3, echo = FALSE}
-err3 <- pullErrors(proofed_data, error = et$error[3])
+err3 <- 
+  pullErrors(proofed_data, error = et$error[3]) %>% 
+  as_tibble() %>% 
+  group_by(value) %>% 
+  summarize(count = n()) %>% 
+  ungroup() %>% 
+  arrange(desc(count))
 
-if(length(err3) > 20){
-  err3[1:20]
-  } else {
-  err3
-    } 
+DT::datatable(err3)
 ```
 
 ## High error proportions
