--- a/inst/templates/season_report.Rmd
+++ b/inst/templates/season_report.Rmd
@@ -150,6 +150,22 @@ errorPlot_dl(proofed_data)
 errorPlot_dl(corrected_data)
 ```
 
+# Other Visualizations
+
+## Permits
+
+```{r perms, echo = FALSE}
+fxd %>% 
+  select(record_type) %>% 
+  group_by(record_type) %>% 
+  summarize(total_count = n()) %>% 
+  ungroup() %>% 
+  ggplot(x = reorder(record_type, -total_count), y = total_count) + 
+  geom_bar(stat = "identity") +
+  labs(x = "Record Type", y = "Count")
+  theme_classic()
+```
+
 ## Out-of-state hunters
 
 ```{r oosh, echo = FALSE}
