--- a/inst/templates/season_report.Rmd
+++ b/inst/templates/season_report.Rmd
@@ -155,15 +155,18 @@ errorPlot_dl(corrected_data)
 ## Permits
 
 ```{r perms, echo = FALSE}
-fxd %>% 
+perms <- 
+  fxd %>% 
   select(record_type) %>% 
   group_by(record_type) %>% 
   summarize(total_count = n()) %>% 
   ungroup() %>% 
   ggplot(x = reorder(record_type, -total_count), y = total_count) + 
   geom_bar(stat = "identity") +
-  labs(x = "Record Type", y = "Count")
+  labs(x = "Record Type", y = "Count") +
   theme_classic()
+
+perms
 ```
 
 ## Out-of-state hunters
