report templates: moved the rm(fxd) line further down because it was preventing the new permits plot from running

--- a/inst/templates/season_report.Rmd
+++ b/inst/templates/season_report.Rmd
@@ -100,9 +100,8 @@ DT::datatable(validate(fxd, type = "vertical"))
 
 ```{r data_sweep, include = FALSE}
 
-# Remove cleaned and fixed data to improve memory use
+# Remove cleaned data to improve memory use
 rm(cleaned_data)
-rm(fxd)
 
 ```
 
@@ -167,6 +166,9 @@ perms <-
   theme_classic()
 
 perms
+
+# Remove fxd to improve memory use
+rm(fxd)
 ```
 
 ## Out-of-state hunters
